Changelog for GEMC
==================

9/12/16
 - added setQuantumS and createQuantumS to form voltage vs time function
 - quantumS created based on user routine **voltage** which returns a voltage value for a given time. The inputs are:

	 - charge value (coming from chargeAtElectronics)
	 - time (coming from timeAtElectronics)

9/6/16
 - added muBrems muonNuclear kaon0SInelastic
 - grouped processes by particle types

8/19/16
 - using fscanf return value for field map reading
 - evio output finalized for charge / time information at electronics

8/18/16
 - text output finalized for charge / time information at electronics

8/17/16
 - implementation / test of charge / time information for calorimeter.
 - starting to write output implementation for charge / time information. TXT in progress

8/16/16
 - introducing chargeTime output in the output factory
 - introducing two new pure virtual functions to be implemented in the hit process routines:

    -  map< int, vector <double> > chargeTime(MHit*, int): will provide 4 outputs:

        #. step index
        #. charge (as seen by a PMT) for a given step
        #. time (as arriving to the PMT) for a given step
        #. hit number

    -  double voltage(double charge, double time, double forTime): returns a voltage for an asked time given a charge/time signal



8/12/16
 - temp reinstatement of scintillatorB until we get Birks Constant in the API

8/11/16
 - getStringVectorFromString and getStringVectorFromStringWithDelimiter from mlibrary
 - replaceCharInStringWithChars from mlibrary
 - getting timewindow and start time from primary generator
 - rf signal added in event action
 - added rf bank
 - implemented txt and evio rf writers
 - added rf writer to event action

8/10/16
 - mlibrary gstring introduced: string manipulation library. This will replace many methods that do not belong in gemc
 - changelog finalized up to 2/4/2008
 - adding RF option"

8/9/16