@@ -31,6 +31,11 @@ public:
 	double pmtDynodeGain;       // PMT dynode gain
 	double pmtDynodeK;          // PMT dynode secondary emission statistics factor: K=0 (Poisson) K=1 (exponential)
 	double pmtFactor;           // Contribution to FWHM from PMT statistical fluctuations.
+
+
+	//	voltage signal parameters, using double gaussian + delay (function DGauss, need documentation for it)
+	double vpar[4];
+
 };
 
 
