@@ -161,165 +161,11 @@ map< string, vector <double> > HitProcess::allRaws(MHit* aHit, int hitn)
 	allRaws["mvy"]     = mvy;
 	allRaws["mvz"]     = mvz;
 	
-	
-	
 	return allRaws;
 }
 
 
 
-//map< double, double >  HitProcess :: signalVT(MHit* aHit)
-//{
-//	// Time resolution is an external parameter
-//	double tres = gemcOpt.optMap["VTRESOLUTION"].arg;
-//	
-//	map< double, double > VT;
-//	sensitiveID SID = aHit->GetSDID();
-//	
-//	// signal parameters
-//	double par[4];
-//
-//	// setting signal parameters
-//	par[0] = SID.delay;
-//	par[1] = SID.riseTime;
-//	par[2] = SID.fallTime;
-//	par[3] = SID.mvToMeV;
-//	
-//	vector<G4double>  Edep  = aHit->GetEdep();
-//	vector<G4double>  times = aHit->GetTime();
-//	unsigned nsteps = Edep.size();	
-//	
-//	double tmin = 100000;
-//	double tmax = 0;
-//	
-//	
-//	// finding min, max
-//	for(unsigned int s=0; s<nsteps; s++)
-//	{
-//		if(tmin > times[s]) tmin = times[s];
-//		if(tmax < times[s]) tmax = times[s];
-//		//	cout << " step " << s+1 << " time " << times[s] << "  tmin " << tmin << "  tmax " << tmax << endl;
-//	}
-//	
-//	// adding 1/2 DELAY to tmin
-//	tmin = floor(tmin + 0.5*SID.delay);
-//	
-//	// adding a whole signal to tmax
-//	tmax = floor(tmax + SID.delay + SID.riseTime + 2*SID.fallTime);
-//	
-//	unsigned int nt = (int) (tmax - tmin)/tres;
-//
-//
-//	// cout <<  "  tmin " << tmin << "  tmax " << tmax << "  nt " << nt << endl;
-//	
-//	for(unsigned ti=0; ti<nt; ti++)
-//	{
-//		// local time
-//		double localT = tmin + ti*tres;
-//		double totV   = 0;
-//		
-//		// v signal at this time is sum of all signals at each step
-//		for(unsigned int s=0; s<nsteps; s++)
-//		{			
-//			totV += DGauss(localT, par, Edep[s], times[s]);
-//			
-////			cout << " local time " << localT << "  step " << s + 1 << " time " << times[s]
-////			<< "  Edep " << Edep[s] << "  signal " << DGauss(localT, par, Edep[s], times[s]) << endl;
-//		}
-//		
-//		VT[localT] = totV + SID.pedestal;
-//	}
-//	
-//	
-////	for(map<double, double>::iterator it = VT.begin(); it != VT.end(); it++)
-////		cout << "  time " << it->first << "   VT " << it->second << endl;
-//	
-//	aHit->setSignal(VT);
-//	
-//	return VT;
-//}
-
-
-
-//map< int, int > HitProcess :: quantumS(map< double, double > vts, MHit* aHit)
-//{
-//	// hardcoded trigger value, need to determine how
-//	double triggerV = 3500;
-//	
-//	sensitiveID sdid = aHit->GetSDID();
-//
-//	// voltage signal time resolution is an external parameter
-//	double sres = gemcOpt.optMap["VTRESOLUTION"].arg;
-//
-//	// sampling time of electronics (typically FADC)
-//	double tsampling = get_number(get_info(gemcOpt.optMap["TSAMPLING"].args).back());
-//
-//	// time resolution is an external parameter
-//	double tres = get_number(get_info(gemcOpt.optMap["TSAMPLING"].args).front());
-//	
-//	// quantum signal, all initialized to zero
-//	// number of elements in the map is total time / resolution
-//	map< int, int > QS;
-//	vector<int> TR;
-//	for(int i=0; i<tsampling/tres; i++)
-//	{
-//		QS[i*4] = 0;
-//		TR.push_back(0);
-//	}
-//	
-//	map< int, int > :: iterator   qsi = QS.begin();
-//	map<double, double>::iterator vti = vts.begin();
-//	int qsind = 0;
-//	
-//	
-//	// leaving the zeros until the first entry in the voltage signal
-//	// attention: looks like this can go on forever in some cases?
-//	while (qsi->first < vti->first)
-//	{
-//		//		cout << qsi->first << " " << vti->first << endl;
-//		qsi++;
-//		qsind++;
-//	}
-//		
-//	for(unsigned i=0; i<vts.size(); i++)
-//	{
-//		if(fabs(vti->first - qsi->first) < sres/2)
-//		{
-//			// recording all signals
-//			QS[qsind*4] = fabs(vti->second - sdid.pedestal);
-//
-//			// recording trigger only if above threshold
-//			if(fabs(vti->second - sdid.pedestal) > sdid.signalThreshold*sdid.mvToMeV)
-//			{
-//				TR[qsind] = triggerV;
-//				aHit->passedTrigger();
-//			}
-//				
-//			// index have to be increased upon matching
-//			qsi++;
-//			qsind++;
-//		}
-//			
-//		vti++;
-//	}
-//	
-//	
-//	
-//	
-////	for(map< int, int > :: iterator qq = QS.begin(); qq != QS.end(); qq++)
-////		cout << qq->first << " " << qq->second << endl;
-//		
-//	
-////	for(map< double, double > :: iterator qq = vts.begin(); qq != vts.end(); qq++)
-////		cout << qq->first << " " << qq->second <<  " " << fabs(qq->second - sdid.pedestal) << " " << sdid.signalThreshold*100 << endl;
-//
-//	aHit->setQuantum(QS);
-//	aHit->setQuantumTR(TR);
-//
-//	
-//	return QS;
-//}
-//
 
 trueInfos::trueInfos(MHit* aHit)
 {
